src/argocd/infra/base/contour/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: contour-gateway-api
  namespace: contour-system
spec:
  gatewayClassName: contour
  listeners:
    - name: tcp-routes
      protocol: TCP
      port: 8090
      allowedRoutes:
        kinds:
          - kind: TCPRoute
    - name: http
      hostname: "*.tuto.mombesoft.com"
      protocol: HTTP
      port: 80
    - name: https
      hostname: "*.tuto.mombesoft.com"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: blog-tutoriels-tls
      allowedRoutes:
        namespaces:
          from: All
